--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="container">
-        <i class='bx bx-money-withdraw' id="menu" onclick="showLogoutPopup()"></i>
+        <i class='bx bx-money-withdraw' id="menu" onclick="showPopup()"></i>
     </div>
     <div class="overlay" id="overlay"></div>
     <div class="popup" id="popup">
@@ -25,8 +25,6 @@
         </div>
         <span class="close" onclick="hidePopup()">&times;</span>
     </div>
-    
-    <img src="img/Background.jpg" alt="" class="bg">
 
     <h1 class="title">BlackJack</h1>
     <h3>Play a Round?</h3>
